# Prisma

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: basic.rs
src/: lib.rs
src/app/: error.rs  mod.rs  prisma.rs
src/common/: position.rs
src/event/: context.rs  mod.rs
src/event/managers/: event_manager.rs  lifecycle_manager.rs  mod.rs  mouse_manager.rs  window_manager.rs
src/nodes/: mod.rs  node.rs  scene.rs
src/nodes/components/: mod.rs  rect.rs  transform.rs
src/render/: renderer.rs
src/scene/: mod.rs  node.rs  scene.rs
src/scene/components/: rect.rs  style.rs
